# firestarter

./: .gitignore  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
pixmaps/: Makefile.in
po/: POTFILES.in  az.gmo  ca.gmo  cs.gmo  da.gmo  de.gmo  el.gmo  en_CA.gmo  en_GB.gmo  es.gmo  fi.gmo  fr.gmo  ga.gmo  hr.gmo  hu.gmo  it.gmo  ja.gmo  ko.gmo  lv.gmo  ml.gmo  nb.gmo  nl.gmo  pa.gmo  pl.gmo  pt.gmo  pt_BR.gmo  ro.gmo  ru.gmo  sk.gmo  sq.gmo  sr.gmo  sr@Latn.gmo  sv.gmo  tr.gmo  uk.gmo  vi.gmo  zh_CN.gmo  zh_TW.gmo
scripts/: Makefile.in
src/: Makefile.in  dhcp-server.c  dhcp-server.h  firestarter.c  firestarter.h  globals.h  gui.c  gui.h  hitview.c  hitview.h  logread.c  logread.h  menus.c  menus.h  netfilter-script.c  netfilter-script.h  policyview.c  preferences.c  preferences.h  savelog.h  scriptwriter.c  scriptwriter.h  service.c  service.h  statusview.c  statusview.h  tray.h  util.h  wizard-choices.h  wizard.c  wizard.h
src/xpm/: Makefile.in
