dnl Process this file with autoconf to produce a configure script.

dnl init autoconf
AC_INIT(configure.in)
AC_PREREQ(2.50)
AC_CONFIG_SRCDIR(src/firestarter.c)
AC_CONFIG_AUX_DIR(.)
AC_PROG_INTLTOOL([0.30])

dnl init automake
AM_INIT_AUTOMAKE(firestarter, 1.0.3)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

GNOME_COMPILE_WARNINGS

AM_GCONF_SOURCE_2

AC_PATH_PROG(GCONFTOOL, gconftool-2, no)

if test x"$GCONFTOOL" = xno; then
  AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf2])
fi

GTK_REQUIRED=2.4.0
LIBGLADE_REQUIRED=2.3.6
GCONF_REQUIRED=3.2.0
X11_REQUIRED=1.5.0

PKG_CHECK_MODULES(FIRESTARTER,
		  gtk+-2.0 >= $GTK_REQUIRED
		  libglade-2.0 >= $LIBGLADE_REQUIRED
		  gconf-2.0 >= $GCONF_REQUIRED
		  x11 >= $X11_REQUIRED)

AC_SUBST(FIRESTARTER_CFLAGS)
AC_SUBST(FIRESTARTER_LIBS)

AM_GCONF_SOURCE_2

dnl i18n
ALL_LINGUAS="az ca cs da de el en_CA en_GB es fi fr ga hr hu it ja ko lv ml nb nl no pa pl pt pt_BR ro ru sk sq sr sr@Latn sv tr uk vi zh_CN zh_TW"
GETTEXT_PACKAGE=firestarter
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Useful for glib-gettextize])
AM_GLIB_GNU_GETTEXT

dnl Set PACKAGE_LOCALE_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale", [Localization])
else
  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale", [Localization])
fi

ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_OUTPUT([
Makefile
firestarter.spec
src/Makefile
src/xpm/Makefile
po/Makefile.in
pixmaps/Makefile
scripts/Makefile
])

